--- a/Trabalho_final_parte_03.ipynb
+++ b/Trabalho_final_parte_03.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Trabalho final parte 03.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMI3ZWReirQTxypgRIqsp3p",
+      "authorship_tag": "ABX9TyPNeMkUZmyJRvH2KWR6pe6V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,9 +63,11 @@
         "from numpy import std\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.datasets import make_classification\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+        "from sklearn.model_selection import LeaveOneOut\n",
         "from sklearn.feature_selection import chi2\n",
         "from sklearn.feature_selection import SelectKBest\n",
         "from sklearn.feature_selection import mutual_info_classif\n",
@@ -77,7 +79,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "from matplotlib import pyplot\n"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -103,21 +105,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "95b43f28-33b2-46f4-b1ac-e29a2b63ef61"
+        "outputId": "e9a08e33-c79e-4dcb-fbf7-b6be7dedea71"
       },
       "source": [
         "uploaded = files.upload()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-e9ce5a70-7e31-44cc-a99f-c82cfa2cc889\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-76eaa4ef-9c82-4565-a45b-459a4dbd9adc\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-e9ce5a70-7e31-44cc-a99f-c82cfa2cc889\">\n",
+              "     <output id=\"result-76eaa4ef-9c82-4565-a45b-459a4dbd9adc\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -134,7 +136,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving Churn_Modelling.csv to Churn_Modelling (17).csv\n"
+            "Saving Churn_Modelling.csv to Churn_Modelling.csv\n"
           ],
           "name": "stdout"
         }
@@ -150,7 +152,7 @@
       "source": [
         "df_discretizazao = pd.read_csv(io.BytesIO(uploaded['Churn_Modelling.csv']), sep=';', encoding='latin1')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -314,7 +316,7 @@
         "# Eliminando dados desnecessários.\n",
         "df_discretizazao = df_discretizazao.drop(['Geography','Gender'], axis=1)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -453,6 +455,16 @@
           },
           "execution_count": 297
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_L3IxLwjcGVt",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Hold-out"
       ]
     },
     {
@@ -720,11 +732,68 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Yba59KnJcaSQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "###LOOCV (Leave-One-Out CV)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9-j4Rqa-cZed",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Separando dos dados do dataset.\n",
+        "X = df_discretizazao.drop(columns=['Exited'], axis=1)\n",
+        "y = df_discretizazao['Exited']"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mp74vLlieJ5N",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4cad914a-4cd8-4bd1-d42c-f085732b2bd6"
+      },
+      "source": [
+        "# Executando o método:\n",
+        "cv = LeaveOneOut()\n",
+        "# Ajustando modelo.\n",
+        "model = RandomForestClassifier(random_state=1)\n",
+        "# Avaliando modelo.\n",
+        "scores = cross_val_score(model, X, y, scoring='accuracy', cv=cv, n_jobs=-1)\n",
+        "# Resultado.\n",
+        "print(\"Accuracy: %.3f (%.3f)\" % (mean(scores), std(scores)))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.854 (0.353)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1GB4SaYAbsMc",
         "colab_type": "text"
       },
       "source": [
-        "Redução de Dados com Numpy"
+        "# Redução de Dados com Numpy"
       ]
     },
     {
